# AIGovHub

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml
AIGovHub/: README.md  docker-compose.yml
AIGovHub/.devcontainer/: devcontainer.json
AIGovHub/.github/workflows/: publish-ghcr.yml
AIGovHub/backend/: .env.example
AIGovHub/backend/app/: main.py
AIGovHub/backend/app/api/: ai_routes.py
AIGovHub/backend/app/services/: ai_governance.py
AIGovHub/docs/: AI_FEATURES.md
AIGovHub/examples/: demo_flow.py
AIGovHub/frontend/: .env.example  .gitignore  package-lock.json  package.json
AIGovHub/frontend/src/: App.tsx  api.ts  index.css
AIGovHub/frontend/src/components/: ComplianceDashboard.tsx  ModelDetail.tsx  ModelForm.tsx  ModelList.tsx  (+2 more)
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py  schemas.py
backend/app/api/: auth_routes.py  metrics_routes.py  organization_routes.py  policy_routes.py  report_routes.py  routes.py
backend/app/core/: auth.py  database.py  policy_engine.py  reports.py
backend/app/models/: __init__.py  all_models.py  organization.py  policy.py
backend/tests/: test_organizations.py  test_policies.py  test_schemas.py
examples/: ci-integration.yml
frontend/: nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: ComplianceDashboard.tsx  ModelDetail.tsx  ModelForm.tsx  ModelList.tsx  PolicyList.tsx  PolicyViolations.tsx
(+3 files in other folders)
